# user-story-map-ai-assistant

./: .coverage  .geminiignore  .gitignore  .gitlab-ci.yml  GEMINI.md  README.md  coverage.xml  ggw.spec  gitlab-sync.code-workspace  init.md  project_map.yaml  pyproject.toml  setup.sh  temp_gemini.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  workspaces.code-workspace
.gemini/: gitlab-config.json  settings.json
.github/workflows/: ci.yml
docs/: analysis_notes.md  architecture-design-document.md  backlog.md  feature-ai-story-map-creation.md  feature-refactoring.md  feature-story-quality-gate.md  product-requirements-document.md  remediation_plan.md  software-requirements-specification.md  technical-design-document.md
docs/spec/: .placeholder
gemini_gitlab_workflow/: gemini_tools.py  pyproject.toml  setup.sh
gemini_gitlab_workflow/gemini_gitlab_workflow/: cli.py  config.py  gitlab_service.py
gemini_gitlab_workflow/tests/: conftest.py  test_ai_service.py  test_gemini_cli.py  test_gitlab_service.py
gemini_prompts/templates/: user-story.md
gitlab_data/_unassigned/: story-mock-story.md  todo1.md
gitlab_data/backbones/core-functionality/epics/: content-creation.md
gitlab_data/backbones/pricelist/: partner-group-setting.md
gitlab_data/backbones/pricelist/partner-group-setting/: epic.md  story-partner-group-price-setting-and-clearing.md
gitlab_data/backbones/user-access/: register-new-user.md
gitlab_data/backbones/user-access/user-profile-management/: epic.md  story-remove-a-profile-picture.md  story-remove-my-profile-picture.md  story-upload-a-profile-picture.md
gitlab_data/backbones/user-access/user-registration/: epic.md  story-register-new-user.md
scripts/: .coverage  README.md  ai_service.py  config copy.example  gemini_cli.py  gitlab_service.py  project_map.yaml  pyproject.toml  sync_gitlab.py
scripts/.gemini_cache/: timestamps.json
scripts/.test_build_map/backbones/project-x/: first-issue.md
scripts/.test_build_map/epics/feature-y/: second-issue.md
scripts/gitlab_data/_unassigned/: clearifiacte-descriptions.md  todo1.md
scripts/gitlab_data/backbones/user-access/: register-new-user.md  user-registration.md
scripts/helper/: bulk_delete.py
scripts/tests/: test_ai_service.py  test_gemini_cli.py  test_gitlab_service.py  test_sync_gitlab.py
src/gemini_gitlab_workflow/: ai_service.py  cli.py  config.py  file_system_repo.py  gemini_tools.py  gitlab_client.py  gitlab_service.py  gitlab_uploader.py  project_mapper.py  sanitizer.py  sync_gitlab.py
tests/: conftest.py  test_ai_service.py  test_file_system_repo.py  test_gemini_cli.py  test_gitlab_client.py  test_gitlab_service.py  test_gitlab_uploader.py  test_project_mapper.py  test_sanitizer.py  test_sync_gitlab.py
